<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="10dp"
    app:cardCornerRadius="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#E0CAFD"
    android:layout_margin="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/textViewItemImage"
            android:layout_width="123dp"
            android:layout_height="166dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/check"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textViewItemNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/aceite"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/textViewItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:text="@string/price"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/textViewItemPriceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/_13_c_u"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/textViewItemTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"
                    android:text="@string/description"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/textViewItemDescriptionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/caja_de_12_unidades"
                    android:textSize="15sp"
                    android:lines="2" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAddToCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/add_to_the_car"
                android:textSize="13sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>